service-ing.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ing
spec:
  type: NodePort
  selector:
    dep: ing
  ports:
    - port: 8889
      targetPort: 80
      nodePort: 31000
