ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: service-ing
                port:
                  number: 8889
